--- a/NewFeatures/iOSLocalization/iOSLocalization/Base.lproj/Main.storyboard
+++ b/NewFeatures/iOSLocalization/iOSLocalization/Base.lproj/Main.storyboard
@@ -1,24 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Igo-T1-Lre">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Hello!-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="iOSLocalization" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hCD-ow-mYG">
+                                <rect key="frame" x="0.0" y="140" width="414" height="722"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OVL-b2-hvA">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="900"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="“Thinking of you keeps me awake. Dreaming of you keeps me asleep. Being with you keeps me alive.”" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFB-T4-eeX">
+                                                <rect key="frame" x="17" y="35" width="380" height="64.5"/>
+                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="18"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="cFB-T4-eeX" firstAttribute="top" secondItem="OVL-b2-hvA" secondAttribute="top" constant="35" id="Caf-Pn-8df"/>
+                                            <constraint firstAttribute="height" constant="900" id="URP-Oz-hnv"/>
+                                            <constraint firstItem="cFB-T4-eeX" firstAttribute="leading" secondItem="OVL-b2-hvA" secondAttribute="leading" constant="17" id="nxH-Ne-Yt9"/>
+                                            <constraint firstAttribute="trailing" secondItem="cFB-T4-eeX" secondAttribute="trailing" constant="17" id="v64-gC-qpD"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="OVL-b2-hvA" firstAttribute="leading" secondItem="hCD-ow-mYG" secondAttribute="leading" id="40Z-6T-yaY"/>
+                                    <constraint firstAttribute="bottom" secondItem="OVL-b2-hvA" secondAttribute="bottom" id="Czz-78-FKt"/>
+                                    <constraint firstItem="OVL-b2-hvA" firstAttribute="centerX" secondItem="hCD-ow-mYG" secondAttribute="centerX" id="Dc3-Ig-dem"/>
+                                    <constraint firstItem="OVL-b2-hvA" firstAttribute="top" secondItem="hCD-ow-mYG" secondAttribute="top" id="ShT-DH-bRO"/>
+                                    <constraint firstAttribute="trailing" secondItem="OVL-b2-hvA" secondAttribute="trailing" id="Wnj-mi-Xxy"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hCD-ow-mYG" secondAttribute="bottom" id="Pk9-NB-4ZA"/>
+                            <constraint firstItem="hCD-ow-mYG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="XIf-SQ-NJV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hCD-ow-mYG" secondAttribute="trailing" id="mxh-sx-l6G"/>
+                            <constraint firstItem="hCD-ow-mYG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="td8-15-PhT"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Hello!" id="ag9-y8-din"/>
+                    <connections>
+                        <outlet property="textLabel" destination="cFB-T4-eeX" id="5RW-bN-gai"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1800.0000000000002" y="134.59821428571428"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7lO-tS-hce">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Igo-T1-Lre" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="9oC-5G-f96">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="eA6-ZS-V7N"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="anc-De-iBw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="889.85507246376824" y="134.59821428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
